TRUNK
  - recognized NetBSD as a platform

------------------------------------------------------------------------------------------------------------------------
* 1.1.0
  - individual RSS feeds for each project
  - documented options configurable through config/site_config.rb
  - added a "from" option to EmailNotifier configuration
  - added Growl notifier to available plugins
  - email notices can contain either full build log, or a link to the dashboard
  - builder does not clear RAILS_ENV environment variable before calling custom tasks
  - builder always sets RAILS_ENV environment to 'test' before calling default tasks
  - "cannot connect to Subversion" situations, plugin errors and other problems that occur outside of a build loop are
    now displayed on the dashboard
  - custom project settings are displayed on the build log page
  - [bugfix] Fixed cruise start --daemon option
  - [bugfix] Removed incomplete builds from RSS feeds
  - [bugfix] CC.rb can now live with localized (non-English) Subversion
  - [bugfix] Fixed problems with CCTray introduced in 1.0 by adding a new build status 'incomplete'
  - [bugfix] Corrected documentation to say "[cruise]/projects/" instead of "[cruise]/builds/"
  - [bugfix] Recognize Solaris as a platform

------------------------------------------------------------------------------------------------------------------------
* 1.0.0
  - IMPORTANT: 'project_config.rb' renamed to 'cruise_config.rb'
  - IMPORTANT: RAILS_ENV is not set to "test" before calling "cruise" or a custom Rake task 
  - checkins (and comments) now show up on dashboard
  - cruise_config.rb can be in either [cruise]/projects/my_project/ or [cruise]/projects/my_project/work/. In other
    words, cruise_config.rb can be placed directly into the version control and obtained from there.
  - Build Now button changes buider state to 'build requested' immediately upon click 